# fake_cpp_project

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Config.cmake.in  README.md
.github/workflows/: build.yaml  deploy.yaml  dev-build.yaml  main-build.yaml
include/fake/: fake.hpp
src/: fake.cpp
